--- a/src/styles/Music.css
+++ b/src/styles/Music.css
@@ -17,8 +17,6 @@
 
 .musicContainerSmall {
   margin: 20px;
-  padding-inline-start: 32px;
-  padding-inline-end: 32px;
   max-width: 1000px;
   display: flex;
   align-self: center;
@@ -281,7 +279,7 @@
   .musicTitle {
     justify-self: center;
     position: relative;
-    top: 20px;
+    top: 40px;
     grid-column: 1/3;
     grid-row: 1/2;
   }
@@ -313,7 +311,7 @@
     justify-items: center;
     align-items: stretch;
     gap: 20px;
-    padding: 32px;
+    padding: 14px 58px;
   }
 
   .pqImg1 {
@@ -561,14 +559,14 @@
 @media (max-width: 695px) {
 
   .musicContainer {
-    margin: 42px 36px 20px;
+    margin: -20px 39px 20px;
   }
 
   .nihiloxicaGridSection {
     justify-content: center;
   }
   .musImg {
-    width: calc(100vw - 76px);
+    width: calc(100vw - 80px);
     height: calc(100vw - 62px);
     padding-bottom: 2px;
   }
@@ -588,6 +586,7 @@
   }
   .musicTitle {
     height: 20px;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    margin-bottom: 30px;
   }
 }
